// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field #error 1`] = `
<div>
  <div
    class="test"
  >
    <label
      for="id_1"
    >
      Test Field
    </label>
    <div
      class="field-content"
    >
      <div
        class="input"
      />
      <p
        class="help"
      >
        Sample help text.
      </p>
      <p
        class="error-message"
      >
        This field is required.
      </p>
    </div>
  </div>
</div>
`;

exports[`Field #help_text 1`] = `
<div>
  <div
    class="test"
  >
    <label
      for="id_1"
    >
      Test Field
    </label>
    <div
      class="field-content"
    >
      <div
        class="input"
      />
      <p
        class="help"
      >
        Sample help text.
      </p>
    </div>
  </div>
</div>
`;

exports[`Field #input_css_classes 1`] = `
<div>
  <div
    class="test"
  >
    <label
      for="id_1"
    >
      Test Field
    </label>
    <div
      class="field-content"
    >
      <div
        class="input field-input"
      />
    </div>
  </div>
</div>
`;

exports[`Field #minimal 1`] = `
<div>
  <div
    class="test"
  >
    <label
      for="id_1"
    >
      Test Field
    </label>
    <div
      class="field-content"
    >
      <div
        class="input"
      />
    </div>
  </div>
</div>
`;
